update readme and fix swagger
